--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h1 class="titulo">Disponibilidade</h1>
 
   <div class="imagem" id="semaforos-container" style="position: relative;">
-     <img src="mago.jpg" width="5784" height="1846" alt="Planta Baixa">
+     <img src="img/imagem.jpg" width="5784" height="1846" alt="Planta Baixa">
     <!-- Adicione mais divs com a classe "semaforo" e ajuste as coordenadas (top e left) conforme necessário -->
   </div>
 
